--- a/scraping-tokyo-olympics.ipynb
+++ b/scraping-tokyo-olympics.ipynb
@@ -3,14 +3,14 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# **Gender Equity at the Tokyo Olympics**"
+    "# **Gender Equity at the Tokyo Olympics 🏅**"
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "The International Olympic Committee touted the 2020 Tokyo Games as the \"[first gender-balanced Games in history](https://olympics.com/ioc/news/tokyo-2020-first-ever-gender-balanced-olympic-games-in-history-record-number-of-female-competitors-at-paralympic-games)\" with women composing 49% of participants. Although its statement described the total gender makeup of the Games, I wondered if differences still existed within teams for certain countries or events. Thus, I set out to understand the true nature of gender equity at the Tokyo Olympics."
+    "### The International Olympic Committee (IOC) touted the 2020 Tokyo Games as the \"[first gender-balanced Games in history](https://olympics.com/ioc/news/tokyo-2020-first-ever-gender-balanced-olympic-games-in-history-record-number-of-female-competitors-at-paralympic-games)\" with women composing 49% of all athletes. Although the IOC's statement referred to the overall gender makeup of participants, **I wondered if the same equity existed among competitors for specific events or countries.**"
    ],
    "metadata": {}
   },
@@ -24,19 +24,26 @@
   {
    "cell_type": "markdown",
    "source": [
-    "First, I needed to collect data from the Olympics website. Of interest was the \"Olympic Medal Count\" table, which contained each country's final ranking based on how many medals they earned. Clicking on a country's name in the table took me to a page with specific entries for that NOC, including the number of participants for each event (called a discipline) categorized by males, females, and total athletes."
+    "### First, I needed data from the Olympics website. Of interest was the [Olympic Medal Count table](https://olympics.com/tokyo-2020/olympic-games/en/results/all-sports/medal-standings.htm), which contained each country's ranking based on how many medals they had earned. Clicking on a country's name in the table led to a page with entries for its team (referred to as National Olympic Committee or NOC), including the participants in each event categorized by male, female, and total athletes."
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# Import libraries to be used\r\n",
+    "import requests\r\n",
+    "from bs4 import BeautifulSoup\r\n",
+    "import pandas as pd"
+   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 33,
    "source": [
-    "# Import libraries to be used\r\n",
-    "import requests\r\n",
-    "from bs4 import BeautifulSoup\r\n",
-    "import pandas as pd\r\n",
-    "\r\n",
     "# Url of the page that we want to scrape\r\n",
     "url = \"https://olympics.com/tokyo-2020/olympic-games/en/results/all-sports/medal-standings.htm\"\r\n",
     "\r\n",
@@ -56,10 +63,19 @@
     "table = soup.find('table', id = 'medal-standing-table')\r\n",
     "\r\n",
     "# Get the link to each country's page from the table\r\n",
-    "links = table.find_all('a', class_ = 'country')\r\n",
-    "\r\n",
-    "# Result is a shortened file path such as \"../../../en/results/all-sports/noc-entries-united-states.htm\"\r\n",
-    "# We need to restore the rest of the url through the following steps\r\n",
+    "links = table.find_all('a', class_ = 'country')"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "''' \r\n",
+    "Result is a shortened file path such as \"../../../en/results/all-sports/noc-entries-united-states.htm\"\r\n",
+    "We need to restore the rest of the url through the following steps\r\n",
+    "'''\r\n",
     "\r\n",
     "url_lib = []\r\n",
     "\r\n",
@@ -67,6 +83,7 @@
     "    link_ending = link.get('href').strip(\"/.\")\r\n",
     "    new_link = \"https://olympics.com/tokyo-2020/olympic-games/\" + link_ending\r\n",
     "    url_lib.append(new_link) \r\n",
+    "    \r\n",
     "# Now the complete url to each country's page is stored in url_lib"
    ],
    "outputs": [],
@@ -84,15 +101,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "source": [
-    "import time\r\n",
-    "\r\n",
     "# Based on initial inspection, we want to get this information\r\n",
     "headings = [\"Country\", \"Discipline\", \"Athletes_F\", \"Atheltes_M\", \"Athletes_Total\"]\r\n",
     "\r\n",
     "# Create a Pandas dataframe with the above headings as columns\r\n",
-    "df = pd.DataFrame(columns = headings)\r\n",
+    "df = pd.DataFrame(columns = headings)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "source": [
+    "import time\r\n",
     "\r\n",
     "# Scrape each country's page\r\n",
     "for url in url_lib:\r\n",
@@ -161,7 +185,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "After compiling my data, I used Matplotlib to build charts and visualize the relationship between different columns."
+    "### After compiling my data, I used Matplotlib to build charts and visualize the relationship between different columns."
    ],
    "metadata": {}
   },
@@ -182,8 +206,10 @@
    "source": [
     "# Import the csv file created previously\r\n",
     "data = pd.read_csv('olympicsdata.csv')\r\n",
+    "\r\n",
     "# Remove extra index column\r\n",
     "del data[\"Unnamed: 0\"]\r\n",
+    "\r\n",
     "data.head()"
    ],
    "outputs": [
@@ -289,6 +315,7 @@
    "source": [
     "# Subset the data to rows containing each country's total team size (not separated by discipline)\r\n",
     "totals = data[data[\"Discipline\"] == \"Total\"]\r\n",
+    "\r\n",
     "totals.head()"
    ],
    "outputs": [
@@ -451,7 +478,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "In the bar chart above, the countries are ordered left to right by their final medal standing. The United States, which placed 1st overall, had the largest combined team of over 600 athletes. China, which placed 2nd, seems to have had fewer participants than expected for the number of medals that it won, as its actual team size was about 100 athletes fewer than the trend line forecast."
+    "### In the bar chart above, the countries are ordered left to right by their final medal standing. The United States, which placed 1st overall, had the largest combined team of over 600 athletes. China, which placed 2nd, seems to have had fewer participants than expected for the number of medals that it won, as its actual team size was about 100 athletes less than the trend line forecast."
    ],
    "metadata": {}
   },
@@ -461,6 +488,7 @@
    "source": [
     "# Get correlation between country medal standing and team size, using Numpy\r\n",
     "r = np.corrcoef(country, athletes)\r\n",
+    "\r\n",
     "r[0,1]"
    ],
    "outputs": [
@@ -480,9 +508,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The correlation coefficient, r = -0.78, suggests a strong negative association between the medal standing of a country and its team size. Unsurprisingly, countries that had smaller teams tended to rank lower (win fewer medals) while countries that had larger teams tended to rank higher.\r\n",
+    "### The correlation coefficient, r = -0.78, suggests a **strong negative association between the medal standing of a country and its team size**. Unsurprisingly, countries that had smaller teams tended to rank lower (win fewer medals) while countries that had larger teams tended to rank higher (win more medals).\r\n",
     "\r\n",
-    "Next, I took a closer look at the breakdown of each country's athletes by gender."
+    "### Next, let's take a closer look at the breakdown of each country's athlete teams by gender."
    ],
    "metadata": {}
   },
@@ -544,9 +572,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "This dumbell chart shows the difference between the number of male and female athletes for each country. Quite a few countries had more females than males. Notably, China had more than twice (> 150) as many female competitors than male competitors. Canada, the Netherlands, and the United States also had large female-leaning teams. On the other hand, countries like Germany, Spain, Argentina, and South Africa all had at least 50 more male athletes than female athletes.\r\n",
+    "### This dumbell chart shows a difference between the number of male and female athletes on the teams of most countries. Notably, **China had over twice (> 150) as many female competitors than male competitors**. Canada, the Netherlands, and the United States also had female-leaning teams. On the other hand, countries like Germany, Spain, Argentina, and South Africa all had at least 50 more male athletes than female athletes.\r\n",
     "\r\n",
-    "We can picture this difference another way by plotting the ratio of women to men on each team."
+    "### We can picture this difference another way by plotting the ratio of women to men on each team."
    ],
    "metadata": {}
   },
@@ -618,7 +646,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "From the above chart, we can see how many women to men were on each country's team. For example, Bulgaria had about two female athletes participating for every one male athlete who was competing."
+    "### From the above chart, we can see the number of women to each man on a country's team. Again, China had the largest ratio of about 2.3 female athletes to every one male athlete who was competing. By contrast, **Saudi Arabia had the lowest ratio** with women making up only 6% of its team."
    ],
    "metadata": {}
   },
@@ -647,9 +675,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The correlation coefficient, r = -0.38, suggests a weak negative association between the medal standing of a country and its ratio of women to men. Countries with a higher gender ratio (more women to each man) tended to rank higher while countries with a lower gender ratio (fewer women to each man) tended to rank lower. However, we can see that there are many exceptions in the graph.\r\n",
+    "### The correlation coefficient, r = -0.38, suggests a **weak negative association between the medal standing of a country and its ratio of women to men**. Countries with a higher gender ratio (more women to each man) tended to rank higher while countries with a lower gender ratio (fewer women to each man) tended to rank lower. However, we can see that there are many exceptions in the graph.\r\n",
     "\r\n",
-    "Finally, I wanted to look at the gender composition of each event."
+    "### Finally, let's look at the gender composition of each event."
    ],
    "metadata": {}
   },
@@ -674,6 +702,7 @@
     "    f.append(disciplines['Athletes_F'][i]/disciplines['Athletes_Total'][i])\r\n",
     "    m.append(disciplines['Athletes_M'][i]/disciplines['Athletes_Total'][i])\r\n",
     "    i = i + 1\r\n",
+    "    \r\n",
     "# Add columns to dataframe\r\n",
     "disciplines = disciplines.assign(F_Ratio = f)\r\n",
     "disciplines = disciplines.assign(M_Ratio = m)\r\n",
@@ -723,11 +752,22 @@
   {
    "cell_type": "markdown",
    "source": [
-    "This bar chart reveals that many events, such as Rowing, Tennis, and Basketball, hosted an equal number of men and women athletes. However, other events like cycling and artistic swimming were heavily skewed toward either end. In fact, artistic swimming and rythmic gymnastics are the only sports where men still do not compete. \r\n",
+    "### This bar chart reveals that events such as rowing, tennis, and basketball hosted equal numbers of men and women athletes. However, several events were skewed in composition toward one gender or the other. \r\n",
     "\r\n",
-    "Looking to the lefthand side, we see cycling has more than 10% male competitors compared to females. This has been a [historic issue](https://www.thestar.com/sports/olympics/opinion/2021/07/21/cycling-is-rolling-slowly-toward-gender-equity-too-slowly-for-its-critics.html)\r\n",
+    "### On the right, we see that artistic swimming and rythmic gymnastics are the **only all-female events**. Although men have performed in both sports at the national level, the [IOC barrs them](https://www.bbc.com/news/magazine-33566335) from competing at the highest level in the Olympics. A major reason for this decision is the [lack of interest](https://apnews.com/article/2020-tokyo-olympics-gymnastics-entertainment-sports-lifestyle-abeb9ae89ceccd0f95728c07846310e6) and participation among men. In many countries, the sports are still percieved as too \"feminine\" despite the enourmous strength and agility demonstrated by athletes.\r\n",
     "\r\n",
-    "Gender inequity continues to exist at the event level."
+    "### On the left, we see that the **male road cycling event featured 31% more competitors** than its female counterpart. Historically, cycling has faced [critism](https://www.thestar.com/sports/olympics/opinion/2021/07/21/cycling-is-rolling-slowly-toward-gender-equity-too-slowly-for-its-critics.html) for its lack of progress toward gender equity. In the 1996 Atlanta Games, only 58 women competed as compared to 183 men. This large gap remains with 67 women competing this year, as compared to 130 men. The length of the women's race is also shorter than the men's race, stretching only 137 kilometers compared to the latter's 234 kilometers. \r\n",
+    "\r\n",
+    "### Similar disparities exist among other Olympic events like boxing, equestrian, softball, football, and swimming."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# **Conclusion**\r\n",
+    "\r\n",
+    "### Gender inequity continues to exist at the event level."
    ],
    "metadata": {}
   }
