--- a/scraping-tokyo-olympics.ipynb
+++ b/scraping-tokyo-olympics.ipynb
@@ -10,7 +10,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The International Olympic Committee (IOC) touted the 2020 Tokyo Games as the \"[first gender-balanced Games in history](https://olympics.com/ioc/news/tokyo-2020-first-ever-gender-balanced-olympic-games-in-history-record-number-of-female-competitors-at-paralympic-games)\" with women composing 49% of all athletes. Although the IOC's statement referred to the overall gender makeup of participants, **I wondered if the same equity existed among competitors for specific events or countries.**"
+    "The International Olympic Committee (IOC) touted the 2020 Tokyo Games as the \"[first gender-balanced Games in history](https://olympics.com/ioc/news/tokyo-2020-first-ever-gender-balanced-olympic-games-in-history-record-number-of-female-competitors-at-paralympic-games)\" with women composing 49% of all athletes. Although the IOC's statement referred to the overall makeup of participants, **I wondered if the same gender equity existed among competitors for specific events or countries.**"
    ],
    "metadata": {}
   },
@@ -310,6 +310,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## **Team Size by Country**"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "source": [
@@ -478,7 +485,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "In the bar chart above, the countries are ordered left to right by their final medal standing. The United States, which placed 1st overall, had the largest combined team of over 600 athletes. China, which placed 2nd, seems to have had fewer participants than expected for the number of medals that it won, as its actual team size was about 100 athletes less than the trend line forecast."
+    "In the bar chart above, the countries are ordered left to right by their final medal standing. The United States, which placed 1st overall, had the largest combined team of over 600 athletes. China, which placed 2nd, had fewer participants than expected for the number of medals that it won, as its actual team size was about 100 athletes less than the trend line forecast."
    ],
    "metadata": {}
   },
@@ -510,7 +517,14 @@
    "source": [
     "The correlation coefficient, r = -0.78, suggests a **strong negative association between the medal standing of a country and its team size**. Unsurprisingly, countries that had smaller teams tended to rank lower (win fewer medals) while countries that had larger teams tended to rank higher (win more medals).\r\n",
     "\r\n",
-    "Next, let's take a closer look at the breakdown of each country's athlete teams by gender."
+    "Next, we can take a closer look at the breakdown of each country's athlete teams by gender."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## **Gender Composition by Country**"
    ],
    "metadata": {}
   },
@@ -575,6 +589,13 @@
     "This dumbell chart shows a difference between the number of male and female athletes on the teams of most countries. Notably, **China had over twice (> 150) as many female competitors than male competitors**. Canada, the Netherlands, and the United States also had female-leaning teams. On the other hand, countries like Germany, Spain, Argentina, and South Africa all had at least 50 more male athletes than female athletes.\r\n",
     "\r\n",
     "We can picture this difference another way by plotting the ratio of women to men on each team."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## **Ratio of Female to Male Athletes**"
    ],
    "metadata": {}
   },
@@ -678,6 +699,13 @@
     "The correlation coefficient, r = -0.38, suggests a **weak negative association between the medal standing of a country and its ratio of women to men**. Countries with a higher gender ratio (more women to each man) tended to rank higher while countries with a lower gender ratio (fewer women to each man) tended to rank lower. However, we can see that there are many exceptions in the graph.\r\n",
     "\r\n",
     "Finally, let's look at the gender composition of each event."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## **Gender Composition by Discipline**"
    ],
    "metadata": {}
   },
