--- a/scraping-tokyo-olympics.ipynb
+++ b/scraping-tokyo-olympics.ipynb
@@ -10,7 +10,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The International Olympic Committee (IOC) touted the 2020 Tokyo Games as the \"[first gender-balanced Games in history](https://olympics.com/ioc/news/tokyo-2020-first-ever-gender-balanced-olympic-games-in-history-record-number-of-female-competitors-at-paralympic-games)\" with women composing 49% of all athletes. Although the IOC's statement referred to the overall makeup of participants, **I wondered if the same gender equity existed among competitors for specific events or countries.**"
+    "The International Olympic Committee (IOC) touted the 2020 Tokyo Games as the \"[first gender-balanced Games in history](https://olympics.com/ioc/news/tokyo-2020-first-ever-gender-balanced-olympic-games-in-history-record-number-of-female-competitors-at-paralympic-games)\" with women composing 49% of all athletes. Although the IOC's statement referred to the overall makeup of participants, **I wondered if the same equity existed among competitors for specific events or countries.**"
    ],
    "metadata": {}
   },
@@ -24,7 +24,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "First, I needed data from the Olympics website. Of interest was the [Olympic Medal Count table](https://olympics.com/tokyo-2020/olympic-games/en/results/all-sports/medal-standings.htm), which contained each country's ranking based on how many medals they had earned. Clicking on a country's name in the table led to a page with entries for its team (referred to as National Olympic Committee or NOC), including the participants in each event categorized by male, female, and total athletes."
+    "> First, I needed data from the Olympics website. Of interest was the [Olympic Medal Count table](https://olympics.com/tokyo-2020/olympic-games/en/results/all-sports/medal-standings.htm), which contained each country's ranking based on how many medals they had earned. Clicking on a country's name in the table led to a page with entries for its team (referred to as National Olympic Committee or NOC), including the participants in each event categorized by male, female, and total athletes."
    ],
    "metadata": {}
   },
@@ -185,7 +185,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "After compiling my data, I used Matplotlib to build charts and visualize the relationship between different columns."
+    "> After compiling my data, I used Matplotlib to build charts and visualize the relationship between different columns."
    ],
    "metadata": {}
   },
@@ -485,7 +485,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "In the bar chart above, the countries are ordered left to right by their final medal standing. The United States, which placed 1st overall, had the largest combined team of over 600 athletes. China, which placed 2nd, had fewer participants than expected for the number of medals that it won, as its actual team size was about 100 athletes less than the trend line forecast."
+    "> In the bar chart above, the countries are ordered left to right by their final medal standing. The United States, which placed 1st overall, had the largest combined team of over 600 athletes. China, which placed 2nd, had fewer participants than expected for the number of medals that it won, as its actual team size was about 100 athletes less than the trend line forecast."
    ],
    "metadata": {}
   },
@@ -515,9 +515,14 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The correlation coefficient, r = -0.78, suggests a **strong negative association between the medal standing of a country and its team size**. Unsurprisingly, countries that had smaller teams tended to rank lower (win fewer medals) while countries that had larger teams tended to rank higher (win more medals).\r\n",
-    "\r\n",
-    "Next, we can take a closer look at the breakdown of each country's athlete teams by gender."
+    "> The correlation coefficient, r = -0.78, suggests a **strong negative association between the medal standing of a country and its team size**. Unsurprisingly, countries that had smaller teams tended to rank lower (win fewer medals) while countries that had larger teams tended to rank higher (win more medals)."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> Next, we can take a closer look at the breakdown of each country's athlete teams by gender."
    ],
    "metadata": {}
   },
@@ -586,9 +591,14 @@
   {
    "cell_type": "markdown",
    "source": [
-    "This dumbell chart shows a difference between the number of male and female athletes on the teams of most countries. Notably, **China had over twice (> 150) as many female competitors than male competitors**. Canada, the Netherlands, and the United States also had female-leaning teams. On the other hand, countries like Germany, Spain, Argentina, and South Africa all had at least 50 more male athletes than female athletes.\r\n",
-    "\r\n",
-    "We can picture this difference another way by plotting the ratio of women to men on each team."
+    "> This dumbell chart shows a difference between the number of male and female athletes on the teams of most countries. Notably, **China had over twice (> 150) as many female competitors than male competitors**. Canada, the Netherlands, and the United States also had female-leaning teams. On the other hand, countries like Germany, Spain, Argentina, and South Africa all had at least 50 more male athletes than female athletes."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> We can picture this difference another way by plotting the ratio of women to men on each team."
    ],
    "metadata": {}
   },
@@ -667,7 +677,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "From the above chart, we can see the number of women to each man on a country's team. Again, China had the largest ratio of about 2.3 female athletes to every one male athlete who was competing. By contrast, **Saudi Arabia had the lowest ratio** with women making up only 6% of its team."
+    "> From the above chart, we can see the number of women to each man on a country's team. Again, China had the largest ratio of about 2.3 female athletes to every one male athlete who was competing. By contrast, **Saudi Arabia had the lowest ratio** with women making up only 6% of its team."
    ],
    "metadata": {}
   },
@@ -696,9 +706,14 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The correlation coefficient, r = -0.38, suggests a **weak negative association between the medal standing of a country and its ratio of women to men**. Countries with a higher gender ratio (more women to each man) tended to rank higher while countries with a lower gender ratio (fewer women to each man) tended to rank lower. However, we can see that there are many exceptions in the graph.\r\n",
-    "\r\n",
-    "Finally, let's look at the gender composition of each event."
+    "> The correlation coefficient, r = -0.38, suggests a **weak negative association between the medal standing of a country and its ratio of women to men**. Countries with a higher gender ratio (more women to each man) tended to rank higher while countries with a lower gender ratio (fewer women to each man) tended to rank lower. However, we can see that there are many exceptions in the graph."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> Finally, let's look at the gender composition of each event."
    ],
    "metadata": {}
   },
@@ -780,13 +795,28 @@
   {
    "cell_type": "markdown",
    "source": [
-    "This bar chart reveals that events such as rowing, tennis, and basketball hosted equal numbers of men and women athletes. However, several events were skewed in composition toward one gender or the other. \r\n",
-    "\r\n",
-    "To the right, we see that artistic swimming and rythmic gymnastics are the **only all-female events**. Although men have performed in both sports at the national level, the [IOC barrs them](https://www.bbc.com/news/magazine-33566335) from competing at the highest level in the Olympics. A major reason for this decision is the [lack of interest](https://apnews.com/article/2020-tokyo-olympics-gymnastics-entertainment-sports-lifestyle-abeb9ae89ceccd0f95728c07846310e6) and participation among men. In many countries, the sports are still considered too \"feminine\" despite the impressive strength and agility demonstrated by their respective athletes.\r\n",
-    "\r\n",
-    "To the left, we see that the **male road cycling event featured 31% more competitors** than its female counterpart. Historically, cycling has faced [critism](https://www.thestar.com/sports/olympics/opinion/2021/07/21/cycling-is-rolling-slowly-toward-gender-equity-too-slowly-for-its-critics.html) for its lack of progress toward gender equity. In the 1996 Atlanta Games, 58 women competed as compared to 183 men. This large gap remains with just 67 women competing this year as compared to 130 men. The length of the women's race is also shorter than the men's race, stretching 137 kilometers compared to the latter's 234 kilometers. \r\n",
-    "\r\n",
-    "Similar gender disparities exist among other Olympic events like boxing, equestrian, softball, football, and swimming."
+    "> This bar chart reveals that events such as rowing, tennis, and basketball hosted equal numbers of men and women athletes. However, several events were skewed in composition toward one gender or the other. "
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> To the right, we see that artistic swimming and rythmic gymnastics are the **only all-female events**. Although men have performed in both sports at the national level, the [IOC barrs them](https://www.bbc.com/news/magazine-33566335) from competing at the highest level in the Olympics. A major reason for this decision is the [lack of interest](https://apnews.com/article/2020-tokyo-olympics-gymnastics-entertainment-sports-lifestyle-abeb9ae89ceccd0f95728c07846310e6) and participation among men. In many countries, the sports are still considered too \"feminine\" despite the impressive strength and agility demonstrated by their respective athletes."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> To the left, we see that the **male road cycling event featured 31% more competitors** than its female counterpart. Historically, cycling has faced [critism](https://www.thestar.com/sports/olympics/opinion/2021/07/21/cycling-is-rolling-slowly-toward-gender-equity-too-slowly-for-its-critics.html) for its lack of progress toward gender equity. In the 1996 Atlanta Games, 58 women competed as compared to 183 men. This large gap remains with just 67 women competing this year as compared to 130 men. The length of the women's race is also shorter than the men's race, stretching 137 kilometers compared to the latter's 234 kilometers. "
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> Similar gender disparities exist among other Olympic events like boxing, equestrian, softball, football, and swimming."
    ],
    "metadata": {}
   },
