--- a/scraping-tokyo-olympics.ipynb
+++ b/scraping-tokyo-olympics.ipynb
@@ -10,7 +10,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The International Olympic Committee (IOC) touted the 2020 Tokyo Games as the \"[first gender-balanced Games in history](https://olympics.com/ioc/news/tokyo-2020-first-ever-gender-balanced-olympic-games-in-history-record-number-of-female-competitors-at-paralympic-games)\" with women composing 49% of all athletes. Although the IOC's statement referred to the overall makeup of participants, **I wondered if the same equity existed among competitors for specific events or countries.**"
+    "The International Olympic Committee (IOC) touted the 2020 Tokyo Games as the \"[first gender-balanced Games in history](https://olympics.com/ioc/news/tokyo-2020-first-ever-gender-balanced-olympic-games-in-history-record-number-of-female-competitors-at-paralympic-games)\" with women composing 49% of all athletes. Although the IOC's statement referred to the overall makeup of participants, **I wondered if the same gender equity has been achieved among competitors for specific events or countries.**"
    ],
    "metadata": {}
   },
