--- a/scraping-tokyo-olympics.ipynb
+++ b/scraping-tokyo-olympics.ipynb
@@ -10,7 +10,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The International Olympic Committee (IOC) touted the 2020 Tokyo Games as the \"[first gender-balanced Games in history](https://olympics.com/ioc/news/tokyo-2020-first-ever-gender-balanced-olympic-games-in-history-record-number-of-female-competitors-at-paralympic-games)\" with women composing 49% of all athletes. Although the IOC's statement referred to the overall makeup of participants, **I wondered if the same gender equity had been achieved among competitors for specific events or countries.**"
+    "The International Olympic Committee (IOC) touted the 2020 Tokyo Games as the \"[first gender-balanced Games in history](https://olympics.com/ioc/news/tokyo-2020-first-ever-gender-balanced-olympic-games-in-history-record-number-of-female-competitors-at-paralympic-games)\" with women composing 49% of all athletes. Although the IOC's statement referred to the overall makeup of participants, **I wondered if the same gender equity had bee achieved among competitors for specific events or countries.**"
    ],
    "metadata": {}
   },
@@ -317,6 +317,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "> I started with a basic bar chart to show the final medal ranking of the countries along with the respective number of athletes on their teams."
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "source": [
@@ -485,7 +492,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> In the bar chart above, the countries are ordered left to right by their final medal standing. The United States, which placed 1st overall, had the largest combined team of over 600 athletes. China, which placed 2nd, had fewer participants than expected for the number of medals that it won, as its actual team size was about 100 athletes less than the trend line forecast."
+    "> In the bar chart above, the countries are ordered left to right by their final medal standing. The United States, which placed 1st overall, had the largest combined team of over 600 athletes. China, which placed 2nd, had a team of around 420 athletes. The country had fewer participants than expected for the number of medals that it won, as the trend line forecasted a team size closer to 530 athletes."
    ],
    "metadata": {}
   },
@@ -522,14 +529,14 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> Next, we can take a closer look at the breakdown of each country's athlete teams by gender."
+    "## **Gender Composition by Country**"
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "## **Gender Composition by Country**"
+    "> Next, we can take a closer look at the breakdown of each country's athlete teams by gender."
    ],
    "metadata": {}
   },
@@ -598,14 +605,14 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> We can picture this difference another way by plotting the ratio of women to men on each team."
+    "## **Ratio of Female to Male Athletes**"
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "## **Ratio of Female to Male Athletes**"
+    "> We can picture this difference another way by plotting the ratio of women to men on each team."
    ],
    "metadata": {}
   },
@@ -677,7 +684,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> From the above chart, we can see the number of women to each man on a country's team. Again, China had the largest ratio of about 2.3 female athletes to every one male athlete who was competing. By contrast, **Saudi Arabia had the lowest ratio** with women making up only 6% of its team."
+    "> From the above chart, we can see the number of women to each man on a country's team. Again, China had the largest ratio of about 2.3 female athletes to every one male athlete who competed. By contrast, **Saudi Arabia had the lowest ratio** of women to men with the former group taking just 6%, or 2 out of 33, spots on its team."
    ],
    "metadata": {}
   },
@@ -706,14 +713,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> The correlation coefficient, r = -0.38, suggests a **weak negative association between the medal standing of a country and its ratio of women to men**. Countries with a higher gender ratio (more women to each man) tended to rank higher while countries with a lower gender ratio (fewer women to each man) tended to rank lower. However, we can see that there are many exceptions in the graph."
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "> Finally, let's look at the gender composition of each event."
+    "> The correlation coefficient, r = -0.38, suggests a **weak negative association between the medal standing of a country and its ratio of women to men**. Countries with a higher gender ratio (more women to each man) tended to rank higher while countries with a lower gender ratio (fewer women to each man) tended to rank lower. However, the graph shows many exceptions."
    ],
    "metadata": {}
   },
@@ -721,6 +721,13 @@
    "cell_type": "markdown",
    "source": [
     "## **Gender Composition by Discipline**"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> Finally, let's look at the gender composition of individual events."
    ],
    "metadata": {}
   },
@@ -802,13 +809,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> To the right, we see that artistic swimming and rythmic gymnastics are the **only all-female events**. Although men have performed in both sports at the national level, the [IOC barrs them](https://www.bbc.com/news/magazine-33566335) from competing at the highest level in the Olympics. A major reason for this decision is the [lack of interest](https://apnews.com/article/2020-tokyo-olympics-gymnastics-entertainment-sports-lifestyle-abeb9ae89ceccd0f95728c07846310e6) and participation among men. In many countries, the sports are still considered too \"feminine\" despite the impressive strength and agility demonstrated by their respective athletes."
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "> To the right, we see that artistic swimming and rythmic gymnastics are the **only all-female events**. Although men have performed in both sports at the national level, the [IOC barrs them](https://www.bbc.com/news/magazine-33566335) from competing at the highest level in the Olympics. A major reason for this decision is the [lack of interest](https://apnews.com/article/2020-tokyo-olympics-gymnastics-entertainment-sports-lifestyle-abeb9ae89ceccd0f95728c07846310e6) and participation among men. In many countries, the sports are still considered too \"feminine\" despite the impressive strength and agility demonstrated by their respective athletes.\r\n",
+    ">\r\n",
     "> To the left, we see that the **male road cycling event featured 31% more competitors** than its female counterpart. Historically, cycling has faced [critism](https://www.thestar.com/sports/olympics/opinion/2021/07/21/cycling-is-rolling-slowly-toward-gender-equity-too-slowly-for-its-critics.html) for its lack of progress toward gender equity. In the 1996 Atlanta Games, 58 women competed as compared to 183 men. This large gap remains with just 67 women competing this year as compared to 130 men. The length of the women's race is also shorter than the men's race, stretching 137 kilometers compared to the latter's 234 kilometers. "
    ],
    "metadata": {}
@@ -827,7 +829,7 @@
     "\r\n",
     "Women have gained ground at the Games, but gender inequity continues to exist on an event and country level. This difference not only manifests in the data but also in the IOC's  rules, which raise questions about the true status of women athletes in the Olympics. Just this year, the Norwegian women's handball team was [fined](https://www.nbcnews.com/news/sports/norwegian-women-s-beach-handball-team-fined-not-playing-bikinis-n1274453) after choosing to compete in shorts rather than bikini bottoms. That being said, widespread support for their move along with growing scrutiny of the IOC's decisions offers hope for the future.\r\n",
     "\r\n",
-    "**What's next?** I plan to revisit this project during subsequent Olympics to track progress toward equity in the Games.\r\n"
+    "**What's next?** I plan to revisit this project during subsequent Olympics and to keep tracking its progress toward gender equity.\r\n"
    ],
    "metadata": {}
   }
